syntax = "proto3";

option go_package = "/";

package pb;

enum MessageStatus {
    noError = 0;
    error = 1;
}

message SignUpRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message AuthRequestNormal {
    string email = 1;
    string password = 2;
}

message AuthRequestJWT {
    string jwt = 1;
}

message AuthResponse {
    MessageStatus error = 1;
    string username = 2;
    string jwt = 3;
}



service AuthService {
    rpc Auth(AuthRequestNormal) returns (AuthResponse);
    rpc AuthJWT(AuthRequestJWT) returns (AuthResponse);
    rpc SignUp(SignUpRequest) returns (AuthResponse);
}